refactor: ChallengeBookmarkService 내 응답 생성 로직을 Assembler로 분리